fix text-align in about block

--- a/public/main.css
+++ b/public/main.css
@@ -79,8 +79,14 @@ a {
   padding: 50px 0px;
 }
 
-.about .col-md-5 p {
-  margin: 0 auto;
+.left {
+  text-align: left;
+  margin: 0 auto 0 25px;
+}
+
+.right {
+  text-align: right;
+  margin: 0 25px 0 auto;
 }
 
 .line {
